fix spacing for social links in footer

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -178,6 +178,10 @@ h3 {
   font-size: 1.5rem;
 }
 
+.link-list li {
+  margin-block-start: .5rem;
+}
+
 .in-page-nav {
   list-style-image: url('../assets/arrow-down.svg');
 }
