--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,10 +23,6 @@ h3 {
   }
 }
 
-.link-list li {
-  margin-block-start: .5rem;
-}
-
 .subsection {
   /* These link colorw work for most of the sections except for About */
   --link-color-interaction: oklch(34.118% .05975 186.34deg); /* Evergreen */
